fix icons in buttons being shifted

--- a/css/firstrunwizard.css
+++ b/css/firstrunwizard.css
@@ -17,7 +17,6 @@
 	height: 16px;
 	width: 16px;
 	position: relative;
-	top: 3px;
 }
 #firstrunwizard .appsmall-calendar,
 #firstrunwizard .appsmall-contacts {
